boxes alignment solved

--- a/styles/style_max600.css
+++ b/styles/style_max600.css
@@ -38,7 +38,7 @@
 			margin-left:-1em;
 			padding-left:13%;
 			padding-bottom:3%;
-			padding-right:13%;
+			padding-right:12%;
 			border-bottom:3px solid rgb(0, 101, 252);
 			box-sizing: border-box;
 		}
@@ -47,10 +47,10 @@
 		{	
 			order:4;
 			font-size:1.4em;
-			padding-left:21%;
-			margin-right:-3em;
+			padding-left:20%;
+			margin-right:-2em;
 			padding-bottom:3%;
-			padding-right:21%;
+			padding-right:20%;
 			border-bottom:3px solid #F2F2F2;
 			box-sizing: border-box;
 		} 
@@ -61,7 +61,7 @@
 			align-self: center;
 			margin-top:0em;
 			margin-left:3em;
-			margin-right:1em;
+			margin-right:2em;
 			font-size:1.4em;
 		} 
 	#ancre_activités
@@ -118,7 +118,8 @@
 
 	#search_mobile
 	{
-		display:inline-block;
+		display:flex;
+		justify-content: center;
 		color:white;
 		background-color: rgb(0, 101, 252);
 		border-radius:30%;
